@@ -1,6 +1,10 @@
 Changes
 =======
 
+    * Use DateTime->set_locale instead of ->set to set the locale. Using ->set
+      may actually change the local time unintentionally. Dave Rolsky. GitHub
+      PR #2.
+
 1.00 29 Nov 2011
     * Work around 5.14 qw() deprecation
     * Tweak test
